src/snapshots/knotty__snapshot_ascii_print-2.snap
---
source: src/lib.rs
expression: ascii_print_compact(trefoil)
---
    _________    
   /         \   
  |           |  
   \   ___   /   
    \ /   \ /    
     \     \     
  __/ \   / \__  
 /     \ /     \ 
|       /       |
 \_____/ \_____/ 

