src/snapshots/knotty__snapshot_ascii_print-3.snap
---
source: src/lib.rs
expression: ascii_print(donut)
---
           __           
          /  \          
         /    \         
        /      \        
       /   /\   \       
      /   <  >   \      
   __/     \/     \__   
  /                  \  
 <                    > 
  \__________________/  
                        
                        

