src/snapshots/knotty__snapshot_ascii_print-4.snap
---
source: src/lib.rs
expression: "ascii_print_compact::<false>(c_thingy)"
---
        _    
       / \   
      /   )  
     /   /   
    /   /    
   /   (     
  /     \__  
 /         \ 
(           )
 \_________/ 

