src/snapshots/knotty__snapshot_ascii_print-5.snap
---
source: src/lib.rs
expression: ascii_print_compact(terrace)
---
        _                                        _        
       / \                                      / \       
      |   \                                    /   |      
       \   \                                  /   /       
        \   \                                /   /        
         |   \                              /   |         
      __/     \_                          _/     \__      
     /          \                        /          \     
    |            \                      /            |    
     \_________   \                    /   _________/     
               \   \                  /   /               
                |   \                /   |                
    ___________/     \_            _/     \___________    
   /                   \          /                   \   
  |                     \        /                     |  
   \__________________   \      /   __________________/   
                      \   \    /   /                      
                       |   \  /   |                       
  ____________________/     \/     \____________________  
 /                                                      \ 
|                                                        |
 \______________________________________________________/ 

