src/snapshots/knotty__snapshot_ascii_print-6.snap
---
source: src/lib.rs
expression: ascii_print(basket)
---
                    _______   ____                    
                   /       \ /    \                   
                  /         \      \                  
                 /  _   ___/ \   _  \                 
                /  / \ /      \ / \  \                
               /  /   \        \   \  \               
           ___/  /  _/ \   ___/ \_  \  \___           
          /     /  /    \ /       \  \     \          
         /     /  /      \         \  \     \         
        /   __/  /   ___/ \______   \  \__   \        
       /   /    /   /            \   \    \   \       
      /   <    /   <              >   \    >   \      
   __/     \__/     \____________/     \__/     \__   
  /                                                \  
 <                                                  > 
  \________________________________________________/  

