src/snapshots/knotty__snapshot_ascii_print-7.snap
---
source: src/lib.rs
expression: ascii_print(ugly_trefoil)
---
           ___________           
          /           \          
         /             \         
        /  _   ___   _  \        
       /  / \ /   \ / \  \       
      /  /   \     \   \  \      
   __/  /   / \   / \   \  \__   
  /    /   /   \ /   \   \    \  
 <    /   <     /     >   \    > 
  \__/     \___/ \___/     \__/  

