src/snapshots/knotty__snapshot_ascii_print-8.snap
---
source: src/lib.rs
expression: "ascii_print_compact::<false>(weird_thing_that_broke_once)"
---
    _                __        
   / \      /\      /  \       
  (   \    (  )    /    \      
   \_  \    \/    /  _   \     
     \  \        /  / \   \    
      \  \      /  /   )   \   
  __   \  \____/  /   /     \  
 /  \   \        /   /       \ 
(    )   \      /   (         )
 \__/     \____/     \_______/ 

