src/snapshots/knotty__snapshot_ascii_print.snap
---
source: src/lib.rs
expression: ascii_print(unknot)
---
   _    
  / \   
 <   >  
  \_/   
        
        

