src/snapshots/knotty__snapshot_from_abbreviated.snap
---
source: src/lib.rs
expression: verbose
---
VerboseDiagram(
    [
        VerboseLine(
            [
                OpenedAbove,
                CrossUpUnder,
                ClosedAbove,
            ],
        ),
        VerboseLine(
            [
                OpenedBelow,
                CrossDownOver,
                ClosedBelow,
            ],
        ),
    ],
)
