src/snapshots/knotty__snapshot_raw_lines_append-2.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        OpenedAbove,
        Line,
        Line,
        Line,
        Line,
    ],
    [
        OpenedBelow,
        TransferUpStart,
        Empty,
        Empty,
        OpenedAbove,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        Empty,
        OpenedBelow,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
        Line,
    ],
]
