src/snapshots/knotty__snapshot_raw_lines_append-3.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        OpenedAbove,
        Line,
        Line,
        Line,
        Line,
        ClosedAbove,
        Empty,
        Empty,
        TransferDownFinish,
    ],
    [
        OpenedBelow,
        TransferUpStart,
        Empty,
        Empty,
        OpenedAbove,
        ClosedBelow,
        Empty,
        TransferDown,
        TransferDownFinish,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        Empty,
        OpenedBelow,
        Line,
        TransferDownStart,
        TransferDown,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
        Line,
        Line,
        TransferDownStart,
        Empty,
        Empty,
    ],
]
