src/snapshots/knotty__snapshot_raw_lines_append-4.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        OpenedAbove,
        Line,
        Line,
        Line,
        Line,
        ClosedAbove,
        Empty,
        Empty,
        TransferDownFinish,
        ClosedAbove,
    ],
    [
        OpenedBelow,
        TransferUpStart,
        Empty,
        Empty,
        OpenedAbove,
        ClosedBelow,
        Empty,
        TransferDown,
        TransferDownFinish,
        ClosedBelow,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        Empty,
        OpenedBelow,
        Line,
        TransferDownStart,
        TransferDown,
        Empty,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
        Line,
        Line,
        TransferDownStart,
        Empty,
        Empty,
        Empty,
    ],
]
